@@ -3,6 +3,13 @@
 	Backported from mainline
 	2019-07-04  Jakub Jelinek  <jakub@redhat.com>
 
+	PR middle-end/78884
+	* gimplify.c (struct gimplify_omp_ctx): Add add_safelen1 member.
+	(gimplify_bind_expr): If seeing TREE_ADDRESSABLE VLA inside of simd
+	loop body, set ctx->add_safelen1 instead of making it GOVD_PRIVATE.
+	(gimplify_adjust_omp_clauses): Add safelen (1) clause if
+	ctx->add_safelen1 is set.
+
 	PR rtl-optimization/90756
 	* explow.c (promote_ssa_mode): Always use TYPE_MODE, don't bypass it
 	for VECTOR_TYPE_P.
